feature: fix search product bug: method sequrity error, order doesnt bound with user, cant add sub comment